feat: rabbitmq, workers, consumer

--- a/Dockerfile.dev.consumer
+++ b/Dockerfile.dev.consumer
@@ -6,4 +6,4 @@ RUN go install github.com/air-verse/air@latest
 
 COPY . .
 
-CMD ["air", "-c", ".air.app.toml"]
+CMD ["air", "-c", ".air.consumer.toml"] 
