feat: renamed to smartsrt

--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,8 @@ SERVER_ADDRESS=:9000
 FRONTEND_URL=http://localhost:3000
 JWT_SECRET=
 
-MONGO_URI=mongodb://kwasec:EirmchcohV8zpo5L@mongo_rs0:27017,mongo_rs1:27018,mongo_rs2:27019/autosrt?replicaSet=rs0&authSource=admin
-MONGO_DB_NAME=autosrt
+MONGO_URI=mongodb://kwasec:EirmchcohV8zpo5L@mongo_rs0:27017,mongo_rs1:27018,mongo_rs2:27019/smartsrt?replicaSet=rs0&authSource=admin
+MONGO_DB_NAME=smartsrt
 
 GOOGLE_REDIRECT_URL=http://localhost:9000/api/v1/auth/google/callback
 GOOGLE_CLIENT_ID=
