--- a/monitoring/prometheus/prometheus.yml
+++ b/monitoring/prometheus/prometheus.yml
@@ -11,7 +11,7 @@ scrape_configs:
     static_configs:
       - targets: ['node-exporter:9100']
 
-  - job_name: 'autosrt-app'
+  - job_name: 'smartsrt-app'
     static_configs:
       - targets: ['app:9000']
     metrics_path: '/api/v1/metrics'
